<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdminEditHour"
        android:background="@drawable/main_background">
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_marginTop="20pt"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico"
                android:textSize="10pt"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:text="@string/AdminCustomSetJam"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pacifico"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:text="@string/AdminCustomSetJamPagi"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/pacifico"
                    android:paddingLeft="10dp"
                    android:inputType="number"
                    android:id="@+id/jamPagi"
                    android:onClick="showTimePicker"
                    android:background="@drawable/round_edit_text_black"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pacifico"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:text="@string/AdminCustomSetJamSiang"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/pacifico"
                    android:paddingLeft="10dp"
                    android:inputType="number"
                    android:id="@+id/jamSiang"
                    android:onClick="showTimePicker"
                    android:background="@drawable/round_edit_text_black"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pacifico"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:text="@string/AdminCustomSetJamMalam"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/pacifico"
                    android:paddingLeft="10dp"
                    android:inputType="number"
                    android:id="@+id/jamMalam"
                    android:onClick="showTimePicker"
                    android:background="@drawable/round_edit_text_black"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:layout_marginVertical="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ButtonSave"
                        android:onClick="updateJam"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>