<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".cateringList"
        android:background="@drawable/main_background">


    <LinearLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_marginTop="20pt"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico"
                android:textSize="15pt"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:text="@string/cateringMenu"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <View android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cateringNewOrder"
                        android:fontFamily="@font/pacifico"
                        android:id="@+id/cateringFragmentEntry"
                        android:textSize="15dp"
                        android:onClick="onchangeFragment"
                        />
                <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cateringListOrderUnderLine"
                        android:fontFamily="@font/pacifico"
                        android:id="@+id/cateringFragmentList"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>