<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:androids="http://schemas.android.com/apk/res-auto"
        tools:context=".profile"
        android:background="@drawable/main_background">
        <LinearLayout
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:layout_marginTop="20pt"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pacifico"
                        android:textSize="15pt"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:textColor="@color/white"
                        android:text="@string/profileMenu"/>
<!--                <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginVertical="10dp"-->
<!--                        android:orientation="vertical">-->
<!--                        <TextView-->
<!--                                android:layout_width="match_parent"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:text="@string/phoneNumber"-->
<!--                                android:textSize="20dp"-->
<!--                                android:fontFamily="@font/pacifico"/>-->
<!--                        <EditText-->
<!--                                android:layout_width="match_parent"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:background="@drawable/round_edit_text_black"-->
<!--                                android:fontFamily="@font/pacifico"-->
<!--                                android:id="@+id/alamat"/>-->
<!--                </LinearLayout>-->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phoneNumber"
                            android:textSize="20dp"
                            android:fontFamily="@font/pacifico"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_edit_text_black"
                            android:fontFamily="@font/pacifico"
                            android:id="@+id/phoneProfile"/>
                </LinearLayout>
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ButtonSave"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/round_edit_text_black"/>
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ButtonLogOut"
                        android:layout_marginTop="30dp"
                        android:id="@+id/buttonLogOut"
                        android:onClick="onchangeMenu"
                        android:background="@drawable/round_edit_text_black"/>
        </LinearLayout>
</FrameLayout>