<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdminAddMenuCombo"
        android:background="@drawable/main_background">
        <LinearLayout
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:layout_marginTop="20pt"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pacifico"
                    android:textSize="15pt"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/black"
                    android:text="@string/AdminCustomCombo"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="50dp"
                    android:orientation="vertical">
                <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pacifico"
                                android:textColor="@color/black"
                                android:layout_marginTop="5dp"
                                android:text="@string/AdminCustomMenuAddComboMaster"
                                />
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:fontFamily="@font/pacifico"
                                android:paddingLeft="10dp"
                                android:id="@+id/namaPaket"
                                android:background="@drawable/round_edit_text_black"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pacifico"
                                android:textColor="@color/black"
                                android:layout_marginTop="5dp"
                                android:text="@string/AdminCustomMenuNameListProductDetail"
                                />
                        <ScrollView
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:paddingVertical="5dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/round_edit_text_black">
                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:id="@+id/scrollViewDaftarProduk">
                            </LinearLayout>
                        </ScrollView>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pacifico"
                                android:textColor="@color/black"
                                android:layout_marginTop="5dp"
                                android:text="@string/AdminCustomMenuNameListCombo"
                                />

                        <ScrollView
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/round_edit_text_black"
                                android:paddingVertical="5dp">

                            <LinearLayout
                                    android:id="@+id/scrollViewDaftarSaved"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    ></LinearLayout>
                        </ScrollView>
                        <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/ButtonSave"
                                android:onClick="buttonSave"/>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </LinearLayout>
</RelativeLayout>