<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HalamanUtama"
        android:background="@drawable/main_background">
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_marginTop="20pt"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="3dp"
                android:background="@drawable/round_edit_text"
                android:elevation="6dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    >
                <View android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="10pt"
                        android:text="Good morning,user"/>
                <View android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        android:textSize="10pt"
                        android:layout_marginLeft="20dp"/>
                <View android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/IDRCurrency"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10pt"
                        android:id="@+id/userBalance"
                        android:text="10.000"
                        android:layout_marginRight="20dp"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10pt">
                <View android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/TopUpBalance"
                            android:gravity="center"/>
                    <ImageView
                            android:layout_width="30pt"
                            android:layout_height="30pt"
                            android:src="@drawable/ic_account_balance_wallet_black_24dp"
                            android:id="@+id/logoTopUp"
                            android:onClick="onchangeMenu"/>
                </LinearLayout>
                <View android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/History"
                            android:gravity="center"/>
                    <ImageView
                            android:layout_width="30pt"
                            android:layout_height="30pt"
                            android:src="@drawable/ic_format_list_bulleted_black_24dp"/>
                </LinearLayout>
                <View android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:orientation="vertical"
                        >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Rewards"
                            android:gravity="center"/>
                    <ImageView
                            android:layout_width="30pt"
                            android:layout_height="30pt"
                            android:src="@drawable/ic_stars_black_24dp"/>
                </LinearLayout>

                <View
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <TextView
                android:layout_marginTop="10pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:text="@string/FavouriteMenu"></TextView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <ImageView
                        android:layout_width="75pt"
                        android:layout_height="50pt"
                        android:src="@drawable/ayam1"
                        android:id="@+id/favMenuPicOne"
                        />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ayam blackpepper"
                        android:id="@+id/favMenuTextOne"
                        android:gravity="center"/>
            </LinearLayout>
            <View android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <ImageView
                        android:layout_width="75pt"
                        android:layout_height="50pt"
                        android:src="@drawable/ayam2"
                        android:id="@+id/favMenuPicTwo"
                        />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ayam BBQ"
                        android:id="@+id/favMenuTextTwo"
                        android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonOrder"
                android:onClick="onchangeMenu"
                android:text="@string/ButtonOrder"/>
    </LinearLayout>
</FrameLayout>